  o Most model families now support the 'standardized' argument, which can be set to 'z' for z-scores (helps convergence) or 'quantile' for a semiparametric transformation
  o Added the ml_lvm family for two-level random intercept latent variable models
  o Added the simplestructure function to easily make a lambda matrix

Changes in version 0.5.1:
  o Fixed a bug with responses being missing when summary statistics are used in Ising()
  o Fixed a bug with covtype sometimes being set to UB when corinput = TRUE
  o Added DOI to description field

Changes in version 0.5.0:
  o The Ising model is now supported (only ML estimation) through the Ising() model function
  o Added the covtype option to several models, controlling if maximum likelihood or unbiased estimates are used for the input covariances
  o Added the function 'covML' for maximum likelihood covariance estimates

Changes in version 0.4.1:
  o Small fix for CRAN checks

Changes in version 0.4:
  o type = "cor" is now supported in varcov, with rho representing the correlations and SD the diagonal standard deviations matrix.
      o The 'corr' function is now implemented as shorthand for varcov(..., type = "cor")
  o The scale of the Fisher information matrix has been adjusted to portray unit information to be similar to Lavaan
  o The getVCOV function has been added to obtain the estimated asymptotic var-cov matrix of the parameters.
  o The meanstructure can now be ignored using meanstructure = TRUE in the following model families:
    - varcov
  o A correlation matrix can now be used as input (detected or set with corinput = TRUE) for the following families:
    - varcov (type = "ggm" and type = "cor")
  o The WLS estimator will now not investigate means when meanstructure is ignored, and variances when a correlaton matrix is used as input.
    - The WLS weights matrix must be of the appropriate dimensions!
    - The WLS.V matrix will no longer be adjusted for missing means.